--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
 			<version>1.1-groovy-2.4</version>
 			<scope>test</scope>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
