Removed Todos and prepare Boostrap

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
         console:
             enabled: true
             path: /console/
+    profiles:
+      active: application
+
 server:
   port: 8080
   context-path: /checkout
